Prevent app message from invisibly blocking links in settings pane

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -332,8 +332,7 @@ HEADER {
 
 .app-message {
     position: absolute;
-    top: 0;
-    padding-top: 6em;
+    top: 6em;
     text-align: center;
     color: white;
     font-size: 2em;
