--- a/src/less/mediaqueries.less
+++ b/src/less/mediaqueries.less
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 320px) and (max-device-width : 568px) and (orientation: landscape) {
     .app-message {
-        padding-top: 1em;
+        top: 1em;
     }
 
     .onebox {
@@ -34,7 +34,7 @@
 
 @media only screen and (min-width: 320px) and (max-device-width : 568px)  and (orientation: portrait) {
     .app-message {
-        padding-top: 4em;
+        top: 4em;
     }
 
     .onebox {
